objects/Input__c.object
<CustomObject>
    <fields>
        <fullName>Buy_Currency__c</fullName>
        <label>Buy Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KRW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LKR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MXN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Counter_Party__c</fullName>
        <label>Counter Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Beneficiary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer/Supplier</label>
        <referenceTo>Input_Beneficiary__c</referenceTo>
        <relationshipLabel>Inputs</relationshipLabel>
        <relationshipName>Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Input_Type__c</fullName>
        <description>This is the selection list used on the page to create a new input record</description>
        <label>Input Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outflow - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast Inflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inflow - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option - WUBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Window Forward Contract - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Forward Contract - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast Outflow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sell_Currency__c</fullName>
        <label>Sell Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KRW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LKR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MXN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Defines the transaction type</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outflow - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast Inflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inflow - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Forward Contract - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Window Forward Contract - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast Outflow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>